fixed spacing in NavBar

--- a/frontend/src/Pages/UserInformation.css
+++ b/frontend/src/Pages/UserInformation.css
@@ -120,9 +120,3 @@ select {
   outline: none;
   cursor: pointer;
 }
-
-.select-box,
-input[type="tel"],
-button {
-  margin-top: 15px;
-}
